--- a/map_kadai.html
+++ b/map_kadai.html
@@ -15,5 +15,5 @@
     
 </body>
 <!------bingmaps起動-------------->
-<script src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=Ais9Xrj_NmK3_0daOifceVvblcWXp72dVEkV4OvcmNRc92q5X6dfDxRggPgR0ske' async defer></script>
+<script src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=**************' async defer></script>
 <script src='map_kadai.js'></script>
